@@ -9,15 +9,9 @@ public class RouterServiceSqlMap extends AbstractSqlMap {
     public RouterServiceSqlMap(IDatabasePlatform platform, Map<String, String> replacementTokens) {
         super(platform, replacementTokens);
 
-        putSql("selectDataToBatchSql",
-                ""
-                        + "select d.data_id, d.table_name, d.event_type, d.row_data, d.pk_data, d.old_data,                                                                        "
-                        + "  d.create_time, d.trigger_hist_id, d.channel_id, d.transaction_id, d.source_node_id, d.external_data, e.data_id from $(data) d left outer join   "
-                        + "  $(data_event) e on d.data_id=e.data_id where d.channel_id=? and d.data_id > ? order by d.data_id asc                                            ");
-
         putSql("selectDataUsingGapsSql",
                 ""
-                        + "select d.data_id, d.table_name, d.event_type, d.row_data, d.pk_data, d.old_data,                        "
+                        + "select $(selectDataUsingGapsSqlHint) d.data_id, d.table_name, d.event_type, d.row_data, d.pk_data, d.old_data,                        "
                         + "  d.create_time, d.trigger_hist_id, d.channel_id, d.transaction_id, d.source_node_id, d.external_data   "
                         + "  from $(data) d where d.channel_id=? $(dataRange)                                                "
                         + "  order by d.data_id asc                                                                                ");
